# ChangeLog for games-emulation/ideas-bin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ideas-bin-1.0.3.4 (26 Mar 2010)

  26 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  ideas-bin-1.0.3.2-r1.ebuild, ideas-bin-1.0.3.3.ebuild,
  +ideas-bin-1.0.3.4.ebuild:
  Bumped with added joypad flag. Updated uris.

*ideas-bin-1.0.3.3 (05 Mar 2010)

  05 Mar 2010; Michał Ziąbkowski <mziab@o2.pl>
  ideas-bin-1.0.3.2-r1.ebuild, +ideas-bin-1.0.3.3.ebuild:
  Bumped. Updated urls.

  22 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  ideas-bin-1.0.3.2-r1.ebuild:
  Re-added ~amd64 keyword as per shade's tests.

  20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  ideas-bin-1.0.3.2-r1.ebuild:
  Make sure baselibs are new enough to contain libgio. amd64 testers wanted.

  20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  ideas-bin-1.0.3.2-r1.ebuild:
  Dropped RESTRICT=strip. Removed ~amd64 keywords until it is confirmed to
  work.

*ideas-bin-1.0.3.2-r1 (14 Jan 2010)

  14 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  +ideas-bin-1.0.3.2-r1.ebuild, +metadata.xml:
  Brought the ebuild back with new urls and support for basic plugins.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> ideas-bin-1.0.3.1.ebuild,
  ideas-bin-1.0.3.2.ebuild:
  Fixed whitespace.

  21 Jul 2009; Michał Ziąbkowski <mziab@o2.pl> +ideas-bin-1.0.3.2.ebuild:
  Bumped.

  12 May 2009; Michał Ziąbkowski <mziab@o2.pl> -ideas-bin-1.0.2.8.ebuild,
  -ideas-bin-1.0.2.9.ebuild, -ideas-bin-1.0.3.0.ebuild,
  +ideas-bin-1.0.3.1.ebuild:
  Bumped. Removed cruft.

  13 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +ideas-bin-1.0.3.0.ebuild:
  Bumped.

  06 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> +ideas-bin-1.0.2.9.ebuild:
  Bumped.

  15 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> ideas-bin-1.0.2.8.ebuild:
  Added support for amd64 using emul-linux-x86-gtklibs.

  14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> ideas-bin-1.0.2.8.ebuild:
  Added RESTRICT and QA_EXECSTACK.
