@@ -1,12 +1,12 @@
 DIST DsPad1.6.1.zip 80485 RMD160 2020f07ce8c2a7385921da8d1f568e919a3734b9 SHA1 449a2155747555b5b947aa894fac30ad498772e3 SHA256 ba8b61697a48d4b605435adca26de67d2af0fad81b2bc0bfa535a57c0c4cb0e3
 DIST audplugin.zip 93938 RMD160 70977b59ba138da429540faf0274635cf05ac5fd SHA1 b63c8a95772fc45dd4ecf5c0315d928375f63b55 SHA256 c56b223d932b37b7ffb4c9bfcb45033c3cae89e32b551afab177eb09b1748874
-DIST ideas1032.tar.bz2 346927 RMD160 0b4e5e5718c9798c39e29d29536be1f0d48e7689 SHA1 08d3f524a071e0373177609e9cf61594ace3f5fb SHA256 c88f99065836a32e5cb8a2f8cadac18fb1d7f0781461f435c1c67ade282739e7
 DIST ideas1033.tar.bz2 364609 RMD160 cee5375b6adeba9012dde7ac731f68bbbb2d126e SHA1 e5c5820a53494816982ebb6d719b9e2d41482f0e SHA256 1a72d640db5275e114915454f19875a5bac23f00ad25675535e849cdcf85ab39
 DIST ideas1034.tar.bz2 381587 RMD160 e6ab0553576ac13251e096d3e6ec6ff8c42e96d4 SHA1 81dd606a8708fdd1e24b645b196397cb475614dd SHA256 aa60437956098b7f8c956f314c7a9d0d4f870189e4ae3a1013bb0824aa3a2eff
+DIST ideas1035.tar.bz2 382265 RMD160 4d56288a4a97f319b97d4c51b344d3022ba312cc SHA1 9af024fff9ce3c03e685bfb19bfcc9655c95ff81 SHA256 8a75958c7ea7996759e3507fc3f4f11a4a53dfcf9bd562f45b4496740486bf6e
 DIST micplugin.zip 21603 RMD160 ebc9f686b1fae630800668bd4303313114d4cf60 SHA1 d256428c9b35f3770b1adcb0a35df9070ae18ba0 SHA256 9d4a024031896fff25c30930d24681a55d9b87855d4f5cac340bb9a2329f67bb
 DIST wifiplugin.zip 41735 RMD160 7b3ccf982971fe2a1d0536b90f58552435e0b333 SHA1 81cc7ed3f238d46e450164cf8253de2a7fa8fc7c SHA256 e50f6e0edc659f736bcd924955832d307235f4f6d1058f71b813b4af90ca1303
-EBUILD ideas-bin-1.0.3.2-r1.ebuild 1575 RMD160 7fcf29820b0b31f184e3e3a961be5c55bcce5140 SHA1 834f35c518bdaccaab18a1d06069200af659b4e7 SHA256 3ad46a792af3fce6a410d19b319f1ea13f99893caae77e10f12cb28ed96b883b
 EBUILD ideas-bin-1.0.3.3.ebuild 1575 RMD160 7fcf29820b0b31f184e3e3a961be5c55bcce5140 SHA1 834f35c518bdaccaab18a1d06069200af659b4e7 SHA256 3ad46a792af3fce6a410d19b319f1ea13f99893caae77e10f12cb28ed96b883b
 EBUILD ideas-bin-1.0.3.4.ebuild 1929 RMD160 b4719d5c2ff3e87625c864479270ca671fe2274f SHA1 5bda173c47cb1ad43e173787a6c18e48567330e6 SHA256 a858343f1a8af70fa002a368af9799508b7999254f85ddf8a1743b5b512fd61c
-MISC ChangeLog 2075 RMD160 85fc0acd6b58bfe3308a1d72add8f9b111092b11 SHA1 6f0b7565f6aa17a17d21c741a9e079613700310c SHA256 c7ef4f3467655eb29a106b3b389714996fe580678387effe1bbd72c7020b8665
+EBUILD ideas-bin-1.0.3.5.ebuild 1929 RMD160 b4719d5c2ff3e87625c864479270ca671fe2274f SHA1 5bda173c47cb1ad43e173787a6c18e48567330e6 SHA256 a858343f1a8af70fa002a368af9799508b7999254f85ddf8a1743b5b512fd61c
+MISC ChangeLog 2243 RMD160 6500926a7957ae3db420a77f48b53d4367d76a35 SHA1 2ee002277a897dec313e9153b078fb8370471444 SHA256 8e4dbabbab158d650d7d5216e2d0b67260385f180914b4a03af9e05a9a62da83
 MISC metadata.xml 354 RMD160 97dda37b02ab61ffe7afb9664127dbc4906b423d SHA1 5aeccd3399f85edee0b9b536402fb1ed9e664502 SHA256 9140c6c3e750d6f088818709a1a2e76e923ae7f5ac61c571bd6305efcc9d4b2c
